--- a/src/pages/shared/Header/Header.css
+++ b/src/pages/shared/Header/Header.css
@@ -1,3 +1,15 @@
 .header {
   border-bottom: 1px solid lightgray;
 }
+
+.header-link {
+  transition: 100ms all ease-in-out;
+  padding: 0.5rem 0.8rem;
+  border-radius: 5px;
+}
+
+.header-link:hover,
+.active-header-link {
+  background-color: #f7f7ff;
+  color: #8c52ff;
+}
