--- a/src/pages/shared/Header/Header.css
+++ b/src/pages/shared/Header/Header.css
@@ -13,3 +13,12 @@
   background-color: #f7f7ff;
   color: #8c52ff;
 }
+
+.btn-burger {
+  border: 1px solid lightgray;
+  transition: 100ms all ease-in-out;
+}
+
+.btn-burger:hover {
+  background-color: #f7f7ff;
+}
