--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
 /*---------- Global ----------*/
+.App {
+  color: #070600;
+}
+
 .btn {
   padding: 8px 20px;
   border-radius: 5px;
   transition: 100ms all ease-in-out;
 }
 
+button:disabled {
+  opacity: 0.7;
+}
 /*---------- Global ----------*/
