--- a/src/pages/Courses/Courses.css
+++ b/src/pages/Courses/Courses.css
@@ -1,11 +1,12 @@
 .courses-container {
   display: grid;
-  grid-template-columns: 1fr 5fr;
+  grid-template-columns: 300px 1fr;
   min-height: 100vh;
 }
 
-.course {
-  background-color: #fff;
-  height: 200px;
-  box-shadow: 0px 10px 30px -3px rgba(0, 0, 0, 0.1);
+
+@media (max-width: 1023px) {
+  .courses-container {
+    grid-template-columns: 1fr;
+  }
 }
