course details page styling completed

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -11,7 +11,7 @@
 }
 
 .auth-form-container .left {
-  background-color: #8c52ff;
+  background-color: #5429ab;
   display: flex;
   align-items: center;
   justify-content: center;
