--- a/src/pages/shared/LeftSideNav/LeftSideNav.css
+++ b/src/pages/shared/LeftSideNav/LeftSideNav.css
@@ -1,10 +1,43 @@
 .left-side-nav {
   background-color: #f7f7ff;
   min-height: 100vh;
+  transition: 0.2s all ease-in-out;
+  z-index: 100;
 }
 
 .side-nav-links {
   position: sticky;
   top: 100px;
   margin-top: 250px;
+}
+
+.sidenav-trigger {
+  position: fixed;
+  top: 20%;
+  left: 0;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  z-index: 150;
+}
+
+@media (max-width: 1024px) {
+  .left-side-nav {
+    position: fixed;
+    left: -380px;
+    top: 0;
+  }
+
+  .active-side-nav {
+    left: 0;
+  }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(7, 6, 0, 0.239);
+  z-index: 50;
 }
