modified the user name tooltip

--- a/src/pages/shared/Header/Header.css
+++ b/src/pages/shared/Header/Header.css
@@ -12,6 +12,10 @@
   border-radius: 5px;
 }
 
+.user-profile-pic:hover ~ .tooltip {
+  display: block;
+}
+
 .header-link:hover,
 .active-header-link {
   background-color: #f7f7ff;
