--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -41,6 +41,11 @@
   padding: 10px 20px;
 }
 
+.leaflet {
+  width: 100%;
+  height: 400px;
+}
+
 @media (max-width: 600px) {
   .features {
     margin-top: -50px;
