implemented user profile update and dark mode

--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,3 +1,9 @@
 .profile-container {
   min-height: 85vh;
 }
+
+.profile-card {
+  width: 800px;
+  max-width: 800px;
+  box-shadow: 0px 10px 30px -3px rgba(0, 0, 0, 0.1);
+}
